# openstack-horizon-2fa-plugin

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
totp_secret/content/totp_secret/: forms.py  panel.py  tables.py  urls.py  views.py
totp_secret/content/totp_secret/templates/totp_secret/: _create_credential.html  create_credential.html  index.html
totp_secret/enabled/: _60000_mfa_plugin.py
