[metadata]
name = totp_secret
summary = Plugin for managing TOTP Secrets
description-file = README.rst
author = Jadon Naas
author_email = jadonn@inmotionhosting.com
classifier =
	Environment :: OpenStack
	Framework :: Django
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3.6

[files]
packages = totp_secret